# pyfolio

./: .gitignore  CLAUDE.md  Makefile  README.en.md  README.md  current_page.html  git-push-sync.bat  git-push-sync.sh  install_package.sh  install_unix.sh  install_win.bat  page_preview.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-empyrical.txt  requirements.txt  setup.py  test_ci_locally.sh  test_python_versions_simple.bat  test_python_versions_simple.sh  timeseries.py  tox.ini  utils.py  versioneer.py
.github/: dependabot.yml
.github/workflows/: badge-refresh.yml  ci.yml  debug-ci.yml  debug.yml  quick-test.yml  release.yml  status-check.yml  status.yml  test-minimal.yml
datas/: positions.csv  基准收益率和日收益率序列.csv
docs/: BADGE_MANAGEMENT.md  CI_CD_TROUBLESHOOTING.md  GIT_SYNC_SETUP.md
examples/: demo.ipynb  demo_flask.py
pyfolio/: LICENSE  __init__.py  _version.py  bayesian.py  capacity.py  deprecate.py  flask_app.py  interesting_periods.py  ipycompat.py  perf_attrib.py  plotting.py  pos.py  risk.py  round_trips.py  setup.py  tears.py  timeseries.py  txn.py  utils.py
pyfolio/static/: style.css
pyfolio/templates/: index.html
scripts/: analyze_ci_failure.py  analyze_ci_logs.py  check_badge_status.py  check_ci_status.bat  check_ci_status.sh  fix_workflow_status.py
tests/: test_capacity.py  test_imports.py  test_perf_attrib.py  test_pos.py  test_round_trips.py  test_tears.py  test_timeseries.py  test_txn.py
